<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.taobaoclient.ui.MainActivity">

    <RelativeLayout
        android:id="@+id/layout_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/divide_line"
    />

    <View
        android:id="@+id/divide_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/layout_menu"
        android:background="@color/line_color"
    />


    <LinearLayout
        android:id="@+id/layout_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="2dp"
    >
        <LinearLayout
            android:id="@+id/item_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bt_menu_0_select"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_str"
                android:textSize="12sp"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_weitao"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bt_menu_1_select"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weitao_str"
                android:textSize="12sp"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_discover"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bt_menu_2_select"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_str"
                android:textSize="12sp"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_buy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bt_menu_3_select"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_str"
                android:textSize="12sp"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bt_menu_4_select"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_str"
                android:textSize="12sp"
            />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
